--- a/.github/workflows/test_cosmicworkstest220230929005430.yml
+++ b/.github/workflows/test_cosmicworkstest220230929005430.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup .NET SDK
+      - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.0'
+          dotnet-version: '3.1'
           include-prerelease: true
 
       - name: Build with dotnet
@@ -32,9 +32,6 @@ jobs:
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
-      - name: Clean Project
-        run: dotnet clean Solution2.sln
-
 
   deploy:
     runs-on: windows-latest
