--- a/CosmicWorksTest2.csproj
+++ b/CosmicWorksTest2.csproj
@@ -9,6 +9,7 @@
     <None Include="wwwroot\js\live-search.js" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.4" />
   </ItemGroup>
 </Project>
